[gd_scene load_steps=3 format=3 uid="uid://bnisb47qe61bq"]

[ext_resource type="Script" uid="uid://dcj7gt0o7ynfq" path="res://Abilities/BaseAbilityScripts/BaseTypeAbility.gd" id="1_tonm5"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_n53ka"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:scale")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="AbilityBody" type="Area2D"]
process_mode = 1
collision_layer = 4
collision_mask = 54
script = ExtResource("1_tonm5")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-1, -4, 1, -4, 3, -3, 4, -1, 4, 1, 3, 3, 1, 4, -1, 4, -3, 3, -4, 1, -4, -1, -3, -3)

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true

[node name="Texture" type="Polygon2D" parent="."]
color = Color(0, 0.529412, 1, 1)
polygon = PackedVector2Array(3, -3, 4, -1, 4, 1, 3, 3, 1, 4, -1, 4, -3, 3, -4, 1, -4, -1, -3, -3, -1, -4, 1, -4)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_n53ka")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
